package test;
import 'test/resource.proto';

enum EnumTestType {
  ONE = 1;
  TWO = 2;
}

message EnumTestMessage {
  optional EnumTestType non_default_enum = 1;
  optional EnumTestType default_enum = 2 [default=ONE];
  repeated EnumTestType repeated_enums = 3;
}

extend test.Resource {
  optional int32 ext_other_file_defined_field = 200;
}
